--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#000000" />gyhtbujfnv67rtfdeg45cv6y3wsedrs
+    <script src="https://www.paypal.com/sdk/js?client-id=AUwfkWT9lxj_RFDYqLxZ2cO7zbeS099zy8XnRwT4xIYEtxj48fuj7B5S2vXLPwyDxSVkgD3oNzNsIA_N&currency=USD&disable-funding=paylater"></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
